# imgui_template_app

./: CMakeLists.txt  README.md  imgui.ini
src/: app.cpp  app.h  user.cpp  user.h
